--- a/compose.yml
+++ b/compose.yml
@@ -16,9 +16,8 @@ configs:
 services:
   certgen:
     image: eclipse-temurin:17-jre-ubi9-minimal
-    profiles: [ "keygen" ]
     volumes:
-      - ./certs1:/certs
+      - ./certs:/certs
       - ./scripts:/scripts
     entrypoint: ''
     command: sh /scripts/mkcerts.sh
@@ -40,6 +39,18 @@ services:
       # actual tcp listener with tls is in the config
       VAULT_DEV_LISTEN_ADDRESS: "0.0.0.0:8300"
     command: server -dev -config /vault.hcl
+    healthcheck:
+      test: >-
+        VAULT_ADDR=https://127.0.0.1:8200
+        VAULT_TOKEN=root
+        VAULT_CACERT=/certs/ca-cert.pem
+        vault status
+      interval: 5s
+    depends_on:
+      certgen:
+        condition: service_completed_successfully
+        # restart ignores `condition`, see https://github.com/docker/compose/issues/12098
+        # restart: true
 
   terraform:
     image: hashicorp/terraform
@@ -50,7 +61,12 @@ services:
       TF_VAR_vault_host: vault
     command: -chdir=terraform apply -auto-approve
     depends_on:
-      - vault
+      vault:
+        condition: service_healthy
+        restart: true
+      # pg needs to be running when we create db engine
+      postgres:
+        condition: service_healthy
 
   postgres:
     image: postgres:latest
@@ -63,6 +79,7 @@ services:
       - "5432:5432"
     healthcheck:
       test: psql -U admin -d dbtest -c 'SELECT 1;'
+      interval: 5s
 
   app:
     build:
@@ -74,13 +91,18 @@ services:
       SPRING_CLOUD_VAULT_URI: https://vault:8200
       SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/dbtest
       SPRING_CLOUD_VAULT_SSL_KEYSTORE: file:/certs/app-keystore.jsk
-    depends_on:
-      - vault
-      - postgres
     ports:
       - 8080:8080
     healthcheck:
-      test: curl -f http://localhost:8080
+      test: curl -f http://localhost:8080 || exit 1
+      interval: 5s
+    depends_on:
+      vault:
+        condition: service_healthy
+      postgres:
+        condition: service_healthy
+      terraform:
+        condition: service_completed_successfully
 
 networks:
   default:
