typo: jsk -> jks

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=app
 spring.cloud.vault.token=root
 spring.cloud.vault.uri=https://localhost:8200
 spring.cloud.vault.scheme=https
-spring.cloud.vault.ssl.truststore=file:../certs/app-keystore.jsk
+spring.cloud.vault.ssl.truststore=file:../certs/app-keystore.jks
 spring.cloud.vault.ssl.truststorePassword=vault-ca
 spring.config.import=vault://db/creds/dev
 
