feat: vault pki

--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -7,7 +7,6 @@ spring.cloud.vault.ssl.truststore=file:../certs/app-keystore.jks
 spring.cloud.vault.ssl.truststorePassword=vault-ca
 spring.config.import=vault://db/creds/dev
 
-# Database configuration (will be overridden by Vault)
-spring.datasource.url=jdbc:postgresql://localhost:5432/dbtest
+spring.datasource.url=jdbc:postgresql://localhost:5432/dbtest?ssl=true&sslmode=verify-ca&sslrootcert=../certs/vault-pki-ca.pem
 spring.datasource.username=${username}
 spring.datasource.password=${password}
