--- a/app/pom.xml
+++ b/app/pom.xml
@@ -9,13 +9,13 @@
     <parent>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-parent</artifactId>
-      <version>3.2.5</version>
+      <version>3.4.0</version>
       <relativePath/> <!-- lookup parent from repository -->
     </parent>
 
     <properties>
       <java.version>17</java.version>
-      <spring-cloud.version>2023.0.1</spring-cloud.version>
+      <spring-cloud.version>2024.0.0</spring-cloud.version>
     </properties>
 
     <dependencies>
@@ -31,16 +31,15 @@
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-starter-vault-config</artifactId>
       </dependency>
+      <dependency>
+        <groupId>org.springframework.cloud</groupId>
+        <artifactId>spring-cloud-vault-config-databases</artifactId>
+      </dependency>
 
       <dependency>
         <groupId>org.postgresql</groupId>
         <artifactId>postgresql</artifactId>
         <scope>runtime</scope>
-      </dependency>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-starter-test</artifactId>
-        <scope>test</scope>
       </dependency>
     </dependencies>
 
