--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -1,12 +1,19 @@
-spring.application.name=app
+spring.application.name=vault-demo
+spring.config.import=vault://
 
-spring.cloud.vault.token=root
-spring.cloud.vault.uri=https://localhost:8200
+spring.datasource.username=user
+spring.datasource.password=pass
+
+spring.cloud.vault.token=${VAULT_TOKEN}
+spring.cloud.vault.uri=${VAULT_ADDR:https://localhost:8200}
 spring.cloud.vault.scheme=https
-spring.cloud.vault.ssl.truststore=file:../certs/app-keystore.jks
+spring.cloud.vault.ssl.truststore=file:${CERTS_PATH:../certs}/app-keystore.jks
 spring.cloud.vault.ssl.truststorePassword=vault-ca
-spring.config.import=vault://db/creds/dev
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/dbtest?ssl=true&sslmode=verify-ca&sslrootcert=../certs/vault-pki-ca.pem
-spring.datasource.username=${username}
-spring.datasource.password=${password}
+spring.cloud.vault.kv.enabled=false
+
+spring.cloud.vault.database.enabled=true
+spring.cloud.vault.database.role=dev
+spring.cloud.vault.database.backend=db
+
+spring.datasource.url=jdbc:postgresql://${DATABASE_HOST:localhost:5432}/dbtest?ssl=true&sslmode=verify-ca&sslrootcert=${CERTS_PATH:../certs}/vault-pki-ca.pem
