--- a/common.yml
+++ b/common.yml
@@ -4,5 +4,7 @@ services:
     volumes:
       - ./certs:/certs
     environment:
-      TF_VAR_vault_host: vault
+      VAULT_ADDR: https://vault:8200
+      VAULT_TOKEN: root
+      VAULT_CACERT: /certs/ca-cert.pem
     command: -chdir=terraform apply -auto-approve -input=false
