--- a/compose.yml
+++ b/compose.yml
@@ -13,15 +13,14 @@ configs:
         tls_disable_client_certs = true
       }
 
-services:
-  certgen:
-    image: eclipse-temurin:17-jre-ubi9-minimal
-    volumes:
-      - ./certs:/certs
-      - ./scripts:/scripts
-    entrypoint: ''
-    command: sh /scripts/mkcerts.sh
+      log_level = "Debug"
 
+  init.sql:
+    content: |
+      CREATE TABLE IF NOT EXISTS numbers (id INTEGER PRIMARY KEY);
+      INSERT INTO numbers (id) VALUES (1), (2), (3), (4), (5);
+
+services:
   vault:
     image: hashicorp/vault:1.18
     container_name: vault
@@ -35,6 +34,7 @@ services:
       - vault.hcl
     environment:
       VAULT_DEV_ROOT_TOKEN_ID: root
+      VAULT_LOG_LEVEL: debug
       # we reroute default dev listener to 8300 because it's unconfigurable
       # actual tcp listener with tls is in the config
       VAULT_DEV_LISTEN_ADDRESS: "0.0.0.0:8300"
@@ -42,15 +42,23 @@ services:
     healthcheck:
       test: >-
         VAULT_ADDR=https://127.0.0.1:8200
-        VAULT_TOKEN=root
         VAULT_CACERT=/certs/ca-cert.pem
         vault status
-      interval: 5s
+      interval: 15s
+      start_interval: 3s
+      start_period: 10s
     depends_on:
-      certgen:
+      tf_certs:
         condition: service_completed_successfully
         # restart ignores `condition`, see https://github.com/docker/compose/issues/12098
         # restart: true
+
+  tf_certs:
+    extends:
+      file: ./common.yml
+      service: terraform
+    volumes:
+      - ./terraform/certs:/terraform
 
   tf_db_engine:
     extends:
@@ -85,6 +93,9 @@ services:
       - "5432:5432"
     volumes:
       - ./certs:/certs
+    configs:
+      - source: init.sql
+        target: /docker-entrypoint-initdb.d/init.sql
     command: >-
       -c ssl=on
       -c ssl_cert_file=/certs/postgres-cert.pem
@@ -93,7 +104,8 @@ services:
     healthcheck:
       test: psql -U admin -d dbtest -h localhost -c 'SELECT 1;'
       interval: 30s
-      start_interval: 5s
+      start_interval: 3s
+      start_period: 30s
     depends_on:
       tf_pki:
         condition: service_completed_successfully
@@ -105,9 +117,11 @@ services:
     volumes:
       - ./certs:/certs
     environment:
-      SPRING_CLOUD_VAULT_URI: https://vault:8200
-      SPRING_DATASOURCE_URL: jdbc:postgresql://postgres:5432/dbtest?sslmode=verify-ca&sslrootcert=/certs/vault-pki-ca.pem
+      VAULT_ADDR: https://vault:8200
+      VAULT_TOKEN: root
+      CERTS_PATH: /certs
       SPRING_CLOUD_VAULT_SSL_KEYSTORE: file:/certs/app-keystore.jks
+      DATABASE_HOST: postgres:5432
     ports:
       - 8080:8080
     healthcheck:
