--- a/app/src/main/resources/application.properties
+++ b/app/src/main/resources/application.properties
@@ -7,8 +7,8 @@ spring.datasource.password=pass
 spring.cloud.vault.token=${VAULT_TOKEN}
 spring.cloud.vault.uri=${VAULT_ADDR:https://localhost:8200}
 spring.cloud.vault.scheme=https
-spring.cloud.vault.ssl.truststore=file:${CERTS_PATH:../certs}/app-keystore.jks
-spring.cloud.vault.ssl.truststorePassword=vault-ca
+spring.cloud.vault.ssl.trust-store=file:${CERTS_PATH:../certs}/ca-cert.pem
+spring.cloud.vault.ssl.trust-store-type=pem
 
 spring.cloud.vault.kv.enabled=false
 
